# DNE-Taac

./: .dockerignore  .gitignore  .projectid  CMakeLists.txt  README.md  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: cache-publish.yml
docker/: Dockerfile.fbthrift  Dockerfile.taac  README.md  build-taac-image.sh  run-fboss-docker.sh  run_taac_docker.sh  taac-entrypoint.sh  taac-regen-thrift.sh
examples/: live_smoke_config.py  smoke_live_device.py
examples/topology/: fboss101_102_circuit_info.csv  fboss101_102_device_info.csv  otg_l3_forwarding_circuit_info.csv  otg_l3_forwarding_device_info.csv  otg_l3_forwarding_sample_containerlab.yml  sample_circuit_info.csv  sample_device_info.csv
getdeps/manifests/: fboss-thrift-defs  fbthrift  fbthrift-python  folly-python  taac
scripts/: _cache-config.sh.example  _lib_cache_uri.sh  _lib_rev.sh  run_tests.sh  setup-host-buildkit-config.sh  setup_getdeps.sh  taac-cache-build.sh  taac-cache-pull.sh  taac-cache-push.sh
taac/: constants.py  packet_headers.py  task_definitions.py  test_configs.py
taac/ai_bb/dsf/: dsf_test_handler.py
taac/custom_test_handlers/: fpf_hardening_handler.py  patcher_cleanup_handler.py  registry.py
taac/driver/: abstract_switch.py  driver_constants.py  drivers_common.py  fboss_switch.py
taac/health_checks/: abstract_health_check.py  abstract_snapshot_health_check.py  all_health_checks.py  common_utils.py  healthcheck_definitions.py
taac/health_checks/device_health_checks/: arista_fboss_next_hop_group_validity_health_check.py  bgp_convergence_health_check.py  bgp_fib_programming_health_check.py  bgp_graceful_restart_health_check.py  bgp_multipath_next_hop_count_health_check.py  bgp_non_best_route_health_check.py  bgp_peer_route_set_equality_health_check.py  bgp_route_count_verification_health_check.py  bgp_session_health_check.py  bgp_stale_route_health_check.py  bgp_tcpdump_health_check.py  bgp_update_group_health_check.py  clear_counters_health_check.py  cpu_utilization_health_check.py  dlb_resource_stickiness_health_check.py  drain_state_health_check.py  ecmp_group_and_member_count_health_check.py  file_exists_health_check.py  fpf_bgp_rib_convergence_health_check.py  fpf_fsdb_ribmap_convergence_health_check.py  fpf_host_spray_health_check.py  fpf_hrt_bulk_convergence_health_check.py  fpf_hrt_fsdb_session_health_check.py  fpf_hrt_plane_status_health_check.py  fpf_hrt_remote_failure_convergence_health_check.py  fpf_hrt_session_stat_health_check.py  fpf_ods_counter_health_check.py  fpf_prod_hrt_prefix_stability_health_check.py  fpf_stale_prefix_health_check.py  generic_ods_health_check.py  l2_entry_threshold_health_check.py  lldp_health_check.py  log_parsing_health_check.py  memory_utilization_health_check.py  oomd_kill_health_check.py  openr_adjacency_health_check.py  openr_fib_validate_health_check.py  openr_initialized_health_check.py  openr_overload_state_health_check.py  openr_spark_neighbor_health_check.py  (+21 more)
taac/health_checks/dsf_health_checks/: dsf_drain_state_health_check.py  dsf_fabric_reachability_health_check.py  dsf_fsdb_session_health_check.py  dsf_fsdb_subscriber_timestamp_health_check.py  dsf_pfc_health_check.py  dsf_traffic_rebalance_health_check.py  test_dsf_fsdb_session_health_check.py
taac/health_checks/ixia_health_checks/: ixia_packet_loss_health_check.py  ixia_port_stats_health_check.py  (+3 more)
taac/ixia/: abstract_traffic_generator.py  diagnostics_client.py  ixia.py  ixnetwork_restpy_constants.py  otg_traffic_gen.py  taac_ixia.py
taac/libs/: custom_payload_registry.py  ixia_config_cache_manager.py  oss_test_bed_chunker.py  otg_traffic_generator.py  parameter_evaluator.py  periodic_task_executor.py  periodic_task_worker.py  signal_catalog_generator.py  taac_runner.py  test_periodic_task_worker.py  test_setup_orchestrator.py  traffic_generator.py
taac/otg/: README.md  otg_basic_l3_test_config.py
taac/playbooks/: dlb_platform_constants.py  playbook.py  playbook_definitions.py
taac/policy_generator/: __init__.py  aspath_generator.py  base.py  community_generator.py  policy_writer.py
taac/runner/: README.md  __init__.py  cli_parser.py  oss_entry_point.py  oss_exception_classifier.py  oss_exceptions.py  oss_return_code.py  oss_test_executor.py  oss_test_result.py  oss_test_status.py  result_formatter.py
taac/stages/: stage.py  stage_definitions.py
taac/steps/: all_steps.py  fpf_bgp_prefix_injection_step.py  fpf_continuous_collector_step.py  register_patcher_step.py  step.py  step_definitions.py
taac/tasks/: all.py  base_task.py  bgp_tcpdump_task.py  configure_bgpcpp_startup_task.py  eos.py  fpf_collector_tasks.py  fpf_ib_traffic_task.py  fpf_inject_bgp_prefixes_task.py  fpf_restart_service_task.py  full_reboot_task.py  interface_ip_configuration_task.py  ixia_tasks.py  periodic_tasks.py  registry.py  test_full_reboot_task.py  utils.py
taac/testbed_params/: testbed_params_ash6_c083.py  testbed_params_bag_snc1_topology1.py  testbed_params_dsf_dtsw_snc1_c087_c088.py  testbed_params_snc1_z083.py  testbed_params_susw_c083_snc1.py
taac/testconfigs/: __init__.py  fboss_bgp_full_scale_kodiak_3_rbb_test_config.py
taac/utils/: client_factory_interface.py  common.py  deploy_utils.py  driver_factory.py  health_check_utils.py  ixia_utils.py  netwhoami_utils.py  oss_client_factory.py  oss_driver_utils.py  oss_taac_lib_utils.py  qos_constants.py  serf_utils.py  skynet_utils.py  system_stress_utils.py  taac_test_summary.py  test_config_utils.py
thrift/: CMakeLists.txt
thrift/bgp/: bgp_thrift.thrift
thrift/configerator/fboss/bgp/: bgp_attr.thrift  bgp_config.thrift
thrift/configerator/structs/neteng/bgp_policy/thrift/: bgp_policy.thrift  rib_policy.thrift
thrift/configerator/structs/neteng/config/: vip_service_config.thrift
thrift/configerator/structs/neteng/ixia/: ixia.thrift
thrift/configerator/structs/neteng/taac/: test_as_a_config.thrift
thrift/ixia/: ixia.thrift  ixia_config_thrift.thrift
thrift/neteng/test_infra/dne/utils/if/: qos_config.thrift
thrift/qosdb/: Cos.thrift
thrift/taac/: health_check.thrift  test_as_a_config.thrift
(+319 files in other folders)
